004_miscellaneous/001_services/002_mono-repo/autoscore-service/etc/kubernetes/beta/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autoscore-api-service-ingress
  namespace: teaching-action
  annotations:
    konghq.com/methods: GET, POST, PUT, PATCH, DELETE, OPTIONS
    konghq.com/preserve-host: "true"
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
spec:
  rules:
    - host: teaching-action-beta.fbr.group
      http:
        paths:
          - backend:
              service:
                name: autoscore-api-service
                port:
                  number: 80
            path: /autoscore-api-service
            pathType: Prefix
  tls:
    - hosts:
        - teaching-action-beta.fbr.group
      secretName: wildcard-fbr-group-2022
status:
  loadBalancer:
    ingress:
      - ip: 34.123.218.25
